suppressed errant log in Bio; fixed height layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@
   background-color: white;
   padding: 50px;
   max-width: 800px;
+  min-height: 85vh;
 }
 
 .icon-row * {
